Fix dark mode bug, change colour

--- a/app-dark.css
+++ b/app-dark.css
@@ -1,5 +1,5 @@
 body {
-    background: black;
+    background: rgb(25, 25, 27);
     font-family: 'Montserrat', sans-serif;
 }
 
